syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.appwish.grpc";
option java_outer_classname = "WishGRPC";

service WishService {
  rpc GetAllWish (AllWishQuery) returns (AllWishReply) {
  }
  rpc GetWish (WishQuery) returns (WishReply) {
  }
}

message AllWishQuery {
}

message WishQuery {
  string id = 1;
}

message AllWishReply {
  repeated Wish wishes = 1;
}

message WishReply {
  Wish wish = 1;
}

message Wish {
  string id = 1;
  string title = 2;
  string description = 3;
  string cover_image_url = 4;
}
